--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -16,7 +16,7 @@ summaryLength: 75
 
 defaultContentLanguage: en
 hasCJKLanguage: false # Set `true` for Chinese/Japanese/Korean.
-# defaultContentLanguageInSubdir: true 
+defaultContentLanguageInSubdir: true 
 
 # Uncomment for google analytics
 # googleAnalytics: UA-123-45
