--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -2,12 +2,12 @@ en:
   languageCode: en
   languageName: English
   # Uncomment for multilingual sites, and move the default content into corresponding sub-folder.
-  # contentDir: content/en
+  contentDir: content/en
 
 pt:
-  languageCode: pt-br
+  languageCode: pt
   languageName: Português
-  # contentDir: content/pt-br
+  contentDir: content/pt
 # Uncomment for multilingual sites, and customize the following config.
 # zh:
 #   languageCode: zh
