--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,19 +4,20 @@ title: Matheus Barbieri
 # Uncomment when not installing with Hugo Modules
 # theme: eureka
 # Comment when not installing with Hugo Modules
-theme: wangchucheng.com/hugo-eureka
+theme: eureka
 # If you cannot access the Github mirror, you can also use the Gitee mirror: gitee.com/wangchucheng/hugo-eureka
 
 paginate: 3
 copyright: >
-  &copy; 2022 
+  &copy; 2022 <a href="https://www.wangchucheng.com/">WANG Chucheng</a> and <a
+  href="https://www.ruiqima.com/">MA Ruiqi</a>
 enableEmoji: true
-enableGitInfo: true 
+enableGitInfo: false
 summaryLength: 75
 
 defaultContentLanguage: en
 hasCJKLanguage: false # Set `true` for Chinese/Japanese/Korean.
-defaultContentLanguageInSubdir: true 
+defaultContentLanguageInSubdir: true
 
 # Uncomment for google analytics
 # googleAnalytics: UA-123-45
@@ -37,7 +38,6 @@ markup:
 taxonomies:
   category: categories
   tag: tags
-  series: series
   author: authors
 
 build:
