--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -7,10 +7,5 @@ en:
 pt:
   languageCode: pt
   languageName: Português
+  # Uncomment for multilingual sites, and move the default content into corresponding sub-folder.
   contentDir: content/pt
-# Uncomment for multilingual sites, and customize the following config.
-# zh:
-#   languageCode: zh
-#   languageName: 简体中文
-#   contentDir: content/zh
-#   title: 中文标题
