--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -9,8 +9,7 @@ theme: eureka
 
 paginate: 3
 copyright: >
-  &copy; 2022 <a href="https://www.wangchucheng.com/">WANG Chucheng</a> and <a
-  href="https://www.ruiqima.com/">MA Ruiqi</a>
+  &copy; 2022 Matheus de Souza Barbieri
 enableEmoji: true
 enableGitInfo: false
 summaryLength: 75
